[gd_scene load_steps=8 format=3 uid="uid://i4e757lp5jlr"]

[ext_resource type="FontFile" uid="uid://daxghmf01ok0q" path="res://assets/kenvector_future_thin.ttf" id="1_ox67u"]
[ext_resource type="Script" path="res://Script/hud.gd" id="1_y3vbt"]
[ext_resource type="Texture2D" uid="uid://3jlhgr62suh1" path="res://assets/player_small.png" id="2_txcyd"]
[ext_resource type="Texture2D" uid="uid://corfu1cx8s730" path="res://assets/play_button.png" id="3_pts8n"]
[ext_resource type="Texture2D" uid="uid://ps38q8bhstht" path="res://assets/play_button_h.png" id="4_7n8g6"]

[sub_resource type="LabelSettings" id="LabelSettings_25641"]
font = ExtResource("1_ox67u")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_mn7cr"]
font = ExtResource("1_ox67u")
font_size = 64

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_y3vbt")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_25641")

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 20

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_txcyd")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_txcyd")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_txcyd")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Space Rocks!"
label_settings = SubResource("LabelSettings_mn7cr")
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_pts8n")
texture_hover = ExtResource("4_7n8g6")
